force-app/main/default/objects/Configuracion_de_Asignacion__c/Configuracion_de_Asignacion__c.object-meta.xml
<CustomObject>
    <label>Configuración de Asignación</label>
    <nameField>
        <displayFormat>C-{0}</displayFormat>
        <label>Número de Asignación</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuraciones de Asignaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>