force-app/main/default/objects/Configuracion_de_Asignacion__c/fields/F_Cantidad_Asignada__c.field-meta.xml
<CustomField>
    <fullName>F_Cantidad_Asignada__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cantidad Asignada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>