force-app/main/default/objects/Configuracion_de_Asignacion__c/fields/F_Usuario__c.field-meta.xml
<CustomField>
    <fullName>F_Usuario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Configuraciones_de_Asignaciones</relationshipName>
    <type>Lookup</type>
</CustomField>