force-app/main/default/objects/Configuracion_de_Asignacion__c/fields/F_Usuario_Activo__c.field-meta.xml
<CustomField>
    <fullName>F_Usuario_Activo__c</fullName>
    <formula>$User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usuario Activo</label>
    <type>Checkbox</type>
</CustomField>