force-app/main/default/objects/Configuracion_de_Asignacion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>F_Usuario__c</columns>
    <columns>F_Usuario_Activo__c</columns>
    <columns>F_Cantidad_Asignada__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>